ProductManagerをMybatis仕様に変更

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.activation-1.1.1.jar=lib/activation-1.1.1.jar
+file.reference.lombok-1.18.22.jar=lib/lombok-1.18.22.jar
 file.reference.mybatis-3.5.9.jar=lib/mybatis-3.5.9.jar
 includes=**
 j2ee.compile.on.save=true
@@ -49,7 +50,8 @@ javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${libs.javaee-api-7.0.classpath}:\
     ${file.reference.mybatis-3.5.9.jar}:\
-    ${file.reference.activation-1.1.1.jar}
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.lombok-1.18.22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -90,7 +92,7 @@ runmain.jvmargs=
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
-src.resources.dir=src/resources
+src.resources2.dir=resources
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
