商品一覧ページのDBアクセスをMybatisに変更

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.activation-1.1.1.jar=lib/activation-1.1.1.jar
+file.reference.jackson-core-2.13.2.jar=lib/jackson-core-2.13.2.jar
 file.reference.lombok-1.18.22.jar=lib/lombok-1.18.22.jar
 file.reference.mybatis-3.5.9.jar=lib/mybatis-3.5.9.jar
 includes=**
@@ -51,7 +52,8 @@ javac.classpath=\
     ${libs.javaee-api-7.0.classpath}:\
     ${file.reference.mybatis-3.5.9.jar}:\
     ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.lombok-1.18.22.jar}
+    ${file.reference.lombok-1.18.22.jar}:\
+    ${file.reference.jackson-core-2.13.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
